# rayx-dataset

./: .dockerignore  .gitignore  Dockerfile  Example.ipynb  LICENSE  README.md  generate.py  pyproject.toml
conf/: config.yaml  defaults.yaml  user.yaml
ray_tools/base/: backend.py  engine.py  transform.py
ray_tools/base/rml/: transform.py
ray_tools/simulation/: data_tools.py
testing/rml/: METRIX_U41_G1_H1_318eV_PS_MLearn_1.15.rml
tests/: conftest.py  test_generator.py
