[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["Qt", "conf", "ray_docker", "tests", "docs"]

[project]
name = "rayx-dataset"
version = "0.1.0"
description = "Ray-based dataset generation using Hydra and Torch"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "David Meier", email = "david.meier@helmholtz-berlin.de" }
]

dependencies = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "torch>=2.1",
  "numpy>=1.24",
  "h5py>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
]

[tool.black]
line-length = 88
